Updated app.js and index.handlebars

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -17,7 +17,7 @@
             <p>{{this.summary}}</p>
         </div>
     </div>
-<div id="comments"></div>
+    <div id={{this.id}} data-id={{this.id}}></div>
     {{/each}}
 </div>
 
